--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "async": "^1.0.0",
     "level": "^1.0.0",
     "nconf": "^0.7.1",
-    "request": "^2.55.0",
-    "twit": "^1.1.20"
+    "request": "^2.55.0"
   },
   "devDependencies": {
     "eslint": "^0.21.2",
